# my_little_factory_manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .test_results.txt  AGENT_INSTRUCTIONS.md  AGENT_SCRIPT.sh  CLAUDE.md  Cargo.toml  DISTRIBUTED_TESTING.md  LICENSE  Makefile  QUICK_TEST.sh  README.md  basic_setup.mk  create_github_issues.sh  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: handle-pr.md  pre-commit.md  start-work.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-builds.yml
UIs/Zellij+nushell/: .gitignore  README.md  config.nu  env.nu  layout.kdl  start.sh
configurations/card_effects/: effect_types.json  token_definitions.json
configurations/general/: game_rules.json
docs/design/: dictionary.md  roadmap.md  vision.md
docs/examples/: api_examples.sh
scripts/: check_all.sh  check_clippy.sh  install-hooks.sh  simplify_smart.py  simplify_strategy.py  test_smartstrategy_optimized.sh  test_tier50.sh  worktree-manage.sh
src/: action_log.rs  adaptive_balance.rs  config.rs  config_loader.rs  contract_generation.rs  endpoints.rs  game_state.rs  lib.rs  main.rs  metrics.rs  starter_cards.rs  types.rs  version.rs
src/docs/: designer.rs  hints.rs  mod.rs  tutorial.rs
tests/: api_endpoints_test.rs  contract_failure_test.rs  contract_system_test.rs  deckbuilding_test.rs  determinism_test.rs  game_loop_test.rs  metrics_test.rs  smoke_test.rs  starter_cards_test.rs  tier_progression_test.rs  types_serialization_test.rs
tests/simulation/: batch_runner.rs  batch_runner_fast.rs  main.rs  (+4 more)
(+15 files in other folders)
